src/objects/echosign_dev1__EchoSignGroupMapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Group_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Adobe Sign Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Profile_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Profile</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Selection</label>
        <type>Checkbox</type>
    </fields>
    <label>Group Mapping</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>